# python-lab

./: README.md
coding-problems/: build.gradle
coding-problems/src/main/java/com/bhuwanupadhyay/codingproblems/contains_duplicate/: Solution1.java  Solution2.java  Solution3.java  Solution4.java
coding-problems/src/test/java/com/bhuwanupadhyay/codingproblems/: TestUtils.java
coding-problems/src/test/java/com/bhuwanupadhyay/codingproblems/contains_duplicate/: Constraints.java  SolutionsTests.java
docker-compose-apps/postgres/: docker-compose.yaml
python/: .gitignore
python/dedupe-library-for-entity-resolution/: README.md  pyproject.toml
python/dedupe-library-for-entity-resolution/dedupe_library_for_entity_resolution/: dedupe_er.py  hack_convenience.py
python/dedupe-library-for-entity-resolution/tests/: dedupe_er_tests.py
terraform/: .gitignore
terraform/aws/host-static-site-using-s3/: acm.tf  main.tf  providers.tf  terraform-backend.conf  terraform.tfvars  variables.tf  z_script.sh
